--- a/index.html
+++ b/index.html
@@ -2,33 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>app name</title>
+    <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
     <div class="app">
       <h1>Pomodoro Timer</h1>
       <div></div>
-      <p id="timer"></p>
+      <p id="timer">25:00</p>
       <button id="25" onclick="fullTimer()">Focus Time</button>
-      <div>
-        <p>The Pomodoro Technique:</p>
-        <ol>
-          Work for 25 minutes
-        </ol>
-        <ol>
-          Break for 5 minutes
-        </ol>
-        <ol>
-          Repeat 2 more times
-        </ol>
-        <ol>
-          Work for 25 minutes
-        </ol>
-        <ol>
-          Break for 20 minutes
-        </ol>
+      <div class="techniqueMenu">
+        <div class="toggle" id="toggle"><i class="fa-solid fa-bars"></i></div>
+        <div class="technique">
+          <h4>The Pomodoro Technique:</h4>
+          <ul>
+            <li>Work for 25 minutes</li>
+            <li>Break for 5 minutes</li>
+            <li>Repeat 2 more times</li>
+            <li>Work for 25 minutes</li>
+            <li>Break for 20 minutes</li>
+          </ul>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
